@@ -1,14 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.hphc.mystudies</groupId>
-	<artifactId>StudyMetaData</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>StudyMetaData</name>
-	<description>HPHCI My Studies Web Services</description>
-	<url>http://maven.apache.org</url>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.hphc.mystudies</groupId>
+  <artifactId>StudyMetaData</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
+  <name>StudyMetaData</name>
+  <description>HPHCI My Studies Web Services</description>
+  <url>http://maven.apache.org</url>
 
   <dependencyManagement>
     <dependencies>
@@ -38,7 +37,7 @@
       <version>1.1.3</version>
       <scope>provided</scope>
     </dependency>
-     <dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.2</version>
@@ -65,7 +64,7 @@
     <dependency>
 	  <groupId>com.fasterxml.jackson.jaxrs</groupId>
 	  <artifactId>jackson-jaxrs-json-provider</artifactId>
-	  <version>2.10.0</version>
+	  <version>2.3.3</version>
 	</dependency>
     <dependency>
       <groupId>org.apache.ibatis</groupId>
@@ -88,173 +87,178 @@
       <artifactId>javax.persistence</artifactId>
       <version>2.1.0</version>
     </dependency>
-        
+    
 	<dependency>
-	    <groupId>org.glassfish.jersey.containers</groupId>
-	    <artifactId>jersey-container-servlet</artifactId>
-	    <version>2.6</version>
+	  <groupId>org.glassfish.jersey.containers</groupId>
+	  <artifactId>jersey-container-servlet</artifactId>
+	  <version>2.6</version>
 	</dependency>
 	<dependency>
-	    <groupId>org.glassfish.jersey.bundles</groupId>
-	    <artifactId>jaxrs-ri</artifactId>
-	    <version>2.6</version>
+	  <groupId>org.glassfish.jersey.bundles</groupId>
+	  <artifactId>jaxrs-ri</artifactId>
+	  <version>2.6</version>
 	</dependency>
 
-		<dependency>
-		    <groupId>io.swagger</groupId>
-		    <artifactId>swagger-annotations</artifactId>
-		    <version>1.5.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>io.swagger</groupId>
-		    <artifactId>swagger-jaxrs</artifactId>
-		    <version>1.5.11</version>
-		    <exclusions>
-			    <exclusion>
-		            <groupId>javax.ws.rs</groupId>
-		            <artifactId>jsr311-api</artifactId>
-	            </exclusion>
-   			</exclusions>
-		</dependency>
-		<dependency>
-		    <groupId>io.swagger</groupId>
-		    <artifactId>swagger-core</artifactId>
-		    <version>1.5.11</version>
-		</dependency>
-		<dependency>
-		    <groupId>io.swagger</groupId>
-		    <artifactId>swagger-models</artifactId>
-		    <version>1.5.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>io.swagger</groupId>
-		    <artifactId>swagger-jersey2-jaxrs</artifactId>
-		    <version>1.5.11</version>
-		</dependency>
-	    <dependency>
-	        <groupId>org.apache.tomcat</groupId>
-	        <artifactId>tomcat-servlet-api</artifactId>
-	        <version>9.0.37</version>
-	        <scope>provided</scope>
-	    </dependency>
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4</version>
-		</dependency>
+	<dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.5.0</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.swagger</groupId>
+	  <artifactId>swagger-jaxrs</artifactId>
+	  <version>1.5.0</version>
+	  <exclusions>
+		<exclusion>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>jsr311-api</artifactId>
+		</exclusion>
+	  </exclusions>
+	</dependency>
+	<dependency>
+	  <groupId>io.swagger</groupId>
+	  <artifactId>swagger-core</artifactId>
+	  <version>1.5.0</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.swagger</groupId>
+	  <artifactId>swagger-models</artifactId>
+	  <version>1.5.0</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.swagger</groupId>
+	  <artifactId>swagger-jersey2-jaxrs</artifactId>
+	  <version>1.5.0</version>
+	</dependency>
+	<dependency>
+	  <groupId>javax.mail</groupId>
+	  <artifactId>mail</artifactId>
+	  <version>1.4</version>
+	</dependency>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-servlet-api</artifactId>
+      <version>9.0.37</version>
+      <scope>provided</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.1</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.16</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.5.5-Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>3.5.5-Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>3.5.5-Final</version>
-		</dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.16</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+      <version>3.5.5-Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>3.5.5-Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>3.5.5-Final</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.13</version>
-		</dependency>
-		<dependency>
-			<groupId>org.dom4j</groupId>
-			<artifactId>dom4j</artifactId>
-			<version>2.1.3</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib</artifactId>
-			<version>2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>jta</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>0.9.1.2</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>
-			<version>2.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.7</version>
-		</dependency>
-		<dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-          <version>2.6.2</version>
-        </dependency>
-        <dependency>
-		  <groupId>com.fasterxml.jackson.core</groupId>
-		  <artifactId>jackson-annotations</artifactId>
-		  <version>2.6.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.8</version>
-		</dependency>
-        
-		 <dependency>
-	        <groupId>javax.xml.bind</groupId>
-	        <artifactId>jaxb-api</artifactId>
-	        <version>2.3.0</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>com.sun.xml.bind</groupId>
-	        <artifactId>jaxb-impl</artifactId>
-	        <version>2.3.0</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.glassfish.jaxb</groupId>
-	        <artifactId>jaxb-runtime</artifactId>
-	        <version>2.3.0</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>javax.activation</groupId>
-	        <artifactId>activation</artifactId>
-	        <version>1.1.1</version>
-	    </dependency>
-      <dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>2.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.1.2</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+    </dependency>
+	<dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-core</artifactId>
+	  <version>2.6.2</version>
+    </dependency>
+    <dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-annotations</artifactId>
+	  <version>2.6.2</version>
+	</dependency>
+	<dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-databind</artifactId>
+	  <version>2.6.2</version>
+	</dependency>
+       
+	<dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
       <version>1.96.0</version>
@@ -262,104 +266,71 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-ext</artifactId>
-      <version>1.7.26</version>
+      <version>1.7.2</version>
     </dependency>
     <dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-text</artifactId>
 		<version>1.9</version>
 	</dependency>
-	</dependencies>
+  </dependencies>
 
-	<build>
-   <finalName>study-datastore</finalName>
-		<plugins>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>3.3.1</version>
-				<configuration>
-					<packagingExcludes>WEB-INF/web.xml</packagingExcludes>
-					<packagingExcludes>META-INF/context.xml</packagingExcludes>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<webXml>WEB-INF/web.xml</webXml>
-					<source>1.7</source>
-					<target>1.7</target>
-				<fork>true</fork>
-      <compilerArgs>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
-      </compilerArgs>
-      <annotationProcessorPaths>
-        <path>
-          <groupId>org.projectlombok</groupId>
-          <artifactId>lombok</artifactId>
-          <version>1.18.12</version>
-        </path>
-      </annotationProcessorPaths>
-    </configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>jib-maven-plugin</artifactId>
-				<version>2.6.0</version>
-				<configuration>
-					<from>
-						<image>tomcat:9.0.33-jdk11-openjdk</image>
-					</from>
-					<container>
-						<appRoot>/usr/local/tomcat/webapps/study-datastore</appRoot>
-					</container>
-				</configuration>
-			</plugin>
-			<plugin>
-	            <groupId>com.github.kongchen</groupId>
-	            <artifactId>swagger-maven-plugin</artifactId>
-	            <version>3.1.0</version>
-	            <configuration>
-	                <apiSources>
-	                    <apiSource>
-	                        <springmvc>false</springmvc>
-	                        <schemes>http,https</schemes>
-	                        <locations>com.hphc.mystudies.service</locations>
-	                        <info>
-	                            <title>Study Meta Data</title>
-			                    <version>2.0.3</version>
-			                    <termsOfService>
-			                        http://www.github.com/kongchen/swagger-maven-plugin
-			                    </termsOfService>
-			                    <license>
-			                        <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-			                        <name>Apache 2.0</name>
-			                    </license>
-							</info>
-	                        <swaggerDirectory>../../fda-mystudies/documentation/API/study-datastore</swaggerDirectory>
-	                    </apiSource>
-	                </apiSources>
-	            </configuration>
-	            <executions>
-	                <execution>
-	                    <phase>compile</phase>
-	                    <goals>
-	                        <goal>generate</goal>
-	                    </goals>
-	                </execution>
-	            </executions>
-	        </plugin>
-		</plugins>
-	</build>
+  <build>
+    <finalName>study-datastore</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.1.1</version>
+        <configuration>
+          <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+          <packagingExcludes>META-INF/context.xml</packagingExcludes>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <webXml>WEB-INF/web.xml</webXml>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+	  <plugin>
+         <groupId>com.github.kongchen</groupId>
+         <artifactId>swagger-maven-plugin</artifactId>
+         <version>3.1.0</version>
+         <configuration>
+           <apiSources>
+             <apiSource>
+               <springmvc>false</springmvc>
+               <schemes>http,https</schemes>
+               <locations>com.hphc.mystudies.service</locations>
+               <info>
+       			 <title>Study Meta Data</title>
+               	 <version>2.0.3</version>
+                 <termsOfService>
+                   http://www.github.com/kongchen/swagger-maven-plugin
+                 </termsOfService>
+	             <license>
+	               <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+	               <name>Apache 2.0</name>
+	             </license>
+			   </info>	
+               <swaggerDirectory>../../fda-mystudies/documentation/API/study-datastore</swaggerDirectory>
+             </apiSource>
+           </apiSources>
+         </configuration>
+         <executions>
+           <execution>
+             <phase>compile</phase>
+             <goals>
+               <goal>generate</goal>
+             </goals>
+           </execution>
+         </executions>
+	   </plugin>
+     </plugins>
+   </build>
 
 </project>
